--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "nicegui == 2.*",
     "python-dotenv == 1.*",
     "docx-mailmerge2 == 0.8.2",
-    "python_serviceplatformen == 1.*"
+    "python_serviceplatformen == 1.*",
+    "passlib == 1.7.*"
 ]
 
 [project.urls]
