--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,6 @@ services:
       - '8080'
     volumes:
       - ./.docker/templates:/etc/nginx/templates:ro
-      - ./ui:/app
-    env_file:
-      - path: .env
-        required: true
-      - path: .env.docker.local
-        required: false
     environment:
       NGINX_WEB_ROOT: /app
       NGINX_PORT: 8080
@@ -45,6 +39,19 @@ services:
     ports:
       - "8080"
     environment:
-      - CONTAINER_EMBEDDING_MODEL_PATH=/model
+      - nicegui_storage_secret=${nicegui_storage_secret}
+      - database_storage_secret=${database_storage_secret}
+      - ui_port=${ui_port:-8080}
+      - ui_host=${ui_host:-0.0.0.0}
+      - ui_reload=${ui_reload:-true}
+      - cvr=${cvr}
+      - kombit_cert_path=${kombit_cert_path}
+      - kombit_test_env=${kombit_test_env:-true}
+      - registration_worker_sleep_time=${registration_worker_sleep_time:-10}
+      - shipment_worker_sleep_time=${shipment_worker_sleep_time:-10}
+      - sender_label=${sender_label:-"Aarhus Kommune"}
+      - path_to_libreoffice=${path_to_libreoffice}
+      - auth_lifetime_seconds=${auth_lifetime_seconds:-43200}
     volumes:
       - ./:/app
+      - ./certs:/app/certs:ro
