--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "python-dotenv == 1.*",
     "docx-mailmerge2 == 0.8.2",
     "python_serviceplatformen == 1.*",
-    "passlib == 1.7.*"
+    "passlib == 1.7.*",
+    "PyJWT == 2.10.*"
 ]
 
 [project.urls]
