--- a/docker-compose.server.yml
+++ b/docker-compose.server.yml
@@ -38,9 +38,12 @@ services:
     build:
       context: .
       dockerfile: .docker/app/Dockerfile
-    command: "python src/OpenPostbud/main.py"
+    command: "OpenPostbud run"
+    restart: unless-stopped
     networks:
       - app
+    ports:
+      - "8080"
     environment:
       - nicegui_storage_secret=${nicegui_storage_secret}
       - database_storage_secret=${database_storage_secret}
@@ -48,22 +51,25 @@ services:
       - ui_host=${ui_host:-0.0.0.0}
       - ui_reload=${ui_reload:-true}
       - cvr=${cvr}
-      - kombit_cert_path=${kombit_cert_path}
-      - kombit_test_env=${kombit_test_env:-true}
+      - client_id=${client_id}
+      - client_secret=${client_secret}
+      - discovery_url=${discovery_url}
+      - redirect_url=${redirect_url}
       - registration_worker_sleep_time=${registration_worker_sleep_time:-10}
       - shipment_worker_sleep_time=${shipment_worker_sleep_time:-10}
       - sender_label=${sender_label:-"Aarhus Kommune"}
       - path_to_libreoffice=${path_to_libreoffice}
       - auth_lifetime_seconds=${auth_lifetime_seconds:-43200}
     volumes:
-      - ./:/app
+      - ./database.db:/app/database.db
       - ./certs:/app/certs:ro
 
   workers:
     build:
       context: .
       dockerfile: .docker/app/Dockerfile
-    command: "python src/OpenPostbud/workers/registration_worker.py && python src/OpenPostbud/workers/shipment_worker.py"
+    command: "OpenPostbud registration_worker && OpenPostbud shipment_worker"
+    restart: unless-stopped
     networks:
       - app
     environment:
@@ -73,13 +79,25 @@ services:
       - ui_host=${ui_host:-0.0.0.0}
       - ui_reload=${ui_reload:-true}
       - cvr=${cvr}
-      - kombit_cert_path=${kombit_cert_path}
+      - client_id=${client_id}
+      - client_secret=${client_secret}
+      - discovery_url=${discovery_url}
+      - redirect_url=${redirect_url}
       - kombit_test_env=${kombit_test_env:-true}
+      - kombit_cert_path=${kombit_cert_path}
+      - Kombit_test_env=${Kombit_test_env:-true}
       - registration_worker_sleep_time=${registration_worker_sleep_time:-10}
       - shipment_worker_sleep_time=${shipment_worker_sleep_time:-10}
       - sender_label=${sender_label:-"Aarhus Kommune"}
       - path_to_libreoffice=${path_to_libreoffice}
       - auth_lifetime_seconds=${auth_lifetime_seconds:-43200}
     volumes:
-      - ./:/app
+      - ./database.db:/app/database.db
       - ./certs:/app/certs:ro
+
+  office:
+    build:
+      context: .
+      dockerfile: .docker/office/Dockerfile
+    networks:
+      - app
